Basic JSP Layout with Servlets
Signed-off-by: James Hillyard <james.hillyard@payara.fish>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# Increase the logging level for embedded Tomcat
+logging.level.org.apache.catalina = INFO
+logging.level.org.apache.coyote = INFO
+logging.level.org.apache.tomcat = INFO
