--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,16 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--    TEST DEPENDENCIES    -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
