--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Run Tests
       run: mvn test
 
+    - name: Generate Jacoco Report
+      run: mvn jacoco:report
+
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       with:
