--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 logging.level.org.apache.catalina = INFO
 logging.level.org.apache.coyote = INFO
 logging.level.org.apache.tomcat = INFO
+
+logging.level.dev.james.lifesync = TRACE
