--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,24 @@ services:
     ports:
       - "8080:8080"
     restart: always
+
+  mysql:
+    image: mysql:8.0.28
+    ports:
+      - "3308:3308"
+    restart: always
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_USER: lifesync # Create a user called 'lifesync'
+      MYSQL_PASSWORD: changeit # Set the 'lifesync' user password to 'changeit'
+      MYSQL_ROOT_PASSWORD: root # Set the master password for user 'root' to 'root'
+      MYSQL_TCP_PORT: 3308 # Set MySQL to run on port 3308
+      MYSQL_DATABASE: lifesync_database # Create the database 'lifesync_database'
+    # Mount the discordbot.sql file and run it - This sets up the database
+    volumes:
+      - db-data:/var/lib/mysql
+      - ./config/database/lifesync_database.sql:/docker-entrypoint-initdb.d/1.sql
+
+volumes:
+  db-data:
+    name: lifesync-db-data
