--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -20,7 +20,7 @@ jobs:
         distribution: zulu
 
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn clean install -DskipTests
 
     - name: Run Tests
       run: mvn test
