--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,2 @@
-# Increase the logging level for embedded Tomcat
-logging.level.org.apache.catalina = INFO
-logging.level.org.apache.coyote = INFO
-logging.level.org.apache.tomcat = INFO
-
-logging.level.dev.james.lifesync = TRACE
-
-spring.datasource.url=jdbc:mysql://localhost:3308/lifesync_database
-spring.datasource.username=lifesync
-spring.datasource.password=changeit
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Default profile
+spring.profiles.active=local
