--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -11,3 +11,7 @@ spring.datasource.password=changeit
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Configure Spring MVC
+spring.mvc.view.prefix = /WEB-INF/views
+spring.mvc.view.suffix = .jsp
