Refactor Content Servlets to Spring Controllers
Signed-off-by: James Hillyard <james.hillyard@payara.fish>

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     </parent>
 
     <dependencies>
+        <!-- SPRING -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
