--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -13,5 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Configure Spring MVC
-spring.mvc.view.prefix = /WEB-INF/views
+spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
