--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -23,7 +23,7 @@ jobs:
       run: mvn clean install -DskipTests
 
     - name: Run Tests
-      run: mvn test
+      run: mvn test -DskipIntegrationTests
 
     - name: Generate Jacoco Report
       run: mvn jacoco:report
