Fix Unit and Integration Tests for Bootstrap 5 Upgrade
Signed-off-by: James Hillyard <james.hillyard@payara.fish>

--- a/docker-compose-integrationtest.yml
+++ b/docker-compose-integrationtest.yml
@@ -1,9 +1,28 @@
 version: '3.9'
 services:
+
+  spring-backend:
+    build:
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    restart: always
+    depends_on:
+      - mysql
+
   mysql:
-    extends:
-      file: docker-compose.yml
-      service: mysql
+    image: mysql:8.0.28
+    ports:
+      - "3308:3308"
+    restart: always
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_USER: lifesync # Create a user called 'lifesync'
+      MYSQL_PASSWORD: changeit # Set the 'lifesync' user password to 'changeit'
+      MYSQL_ROOT_PASSWORD: root # Set the master password for user 'root' to 'root'
+      MYSQL_TCP_PORT: 3308 # Set MySQL to run on port 3308
+      MYSQL_DATABASE: lifesync_database # Create the database 'lifesync_database'
+    # Mount the lifesync_database.sql file and run it - This sets up the database
     volumes:
+      - ./config/database/lifesync_database.sql:/docker-entrypoint-initdb.d/1.sql
       - ./config/database/sample_data.sql:/docker-entrypoint-initdb.d/2.sql
-      - /var/lib/mysql  # This will override the db-data volume from the base file
