Add Prometheus Grafana Stack for Advanced Monitoring
Signed-off-by: James Hillyard <james.hillyard@payara.fish>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,33 @@ services:
       - db-data:/var/lib/mysql
       - ./config/database/lifesync_database.sql:/docker-entrypoint-initdb.d/1.sql
 
+
+  # Advanced Monitoring
+  prometheus:
+    image: prom/prometheus:v2.50.1
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - "9090:9090"
+    volumes:
+      - prometheus-data:/prometheus
+      - ./config/prometheus:/etc/prometheus
+
+  grafana:
+    image: grafana/grafana:10.2.2
+    ports:
+      - '3000:3000'
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./config/grafana/datasources:/etc/grafana/provisioning/datasources:ro
+      - ./config/grafana/dashboards:/etc/grafana/provisioning/dashboards:ro
+    depends_on:
+      - prometheus
+
 volumes:
   db-data:
     name: lifesync-db-data
+  prometheus-data:
+    name: lifesync-prometheus-data
+  grafana-data:
+    name: lifesync-grafana-data
