--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -15,3 +15,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # Configure Spring MVC
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
+
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.prometheus.metrics.export.enabled=true
+management.endpoint.prometheus.enabled=true
